[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdownrender"
version = "0.1.0"
description = "A service to render Markdown with Mermaid, PlantUML and images into HTML, Word, Excel and PDF"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MarkdownRender Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask>=2.3.0",
    "gunicorn>=21.0.0",
    "markdown>=3.5.0",
    "pymdown-extensions>=10.3.0",
    "plantuml>=0.3.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "weasyprint>=60.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
]

[project.scripts]
markdownrender = "markdownrender.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py39"]
